--- a/mmbase/trunk/contributions/didactor2/src/education/config/translations/education.fr.properties
+++ b/mmbase/trunk/contributions/didactor2/src/education/config/translations/education.fr.properties
@@ -88,7 +88,7 @@ learnobject=Elément de la formation
 metadata=Formation
 new=nouveau
 next=Suivant
-nocopybookfound=It is not possible to make this test, because no copybook has been found which is related to this education or to this class.
+nocopybookfound=Ce n'est pas possible de faire ce test, comme seulement les étudiants peuvent remplir les réponses.
 ok=Ok
 persons=Personnes
 personstab=Gestion des personnes
