--- a/mmbase/trunk/contributions/didactor2/src/education/config/translations/education.properties
+++ b/mmbase/trunk/contributions/didactor2/src/education/config/translations/education.properties
@@ -78,7 +78,7 @@ isboimport=ISBO Import
 learnenvironmenttitle=Learnenvironment
 learnobject=Learnobject
 new=new
-nocopybookfound=It is not possible to make this test, because no copybook has been found which is related to this education or to this class.
+nocopybookfound=It is not possible to do this test, as only students can fill in the answers.
 ok=Ok
 persons=People
 personstab=People management
