--- a/mmbase/trunk/contributions/CMSContainer/cmsc/contentrepository/resources/cmsc-repository_nl.properties
+++ b/mmbase/trunk/contributions/CMSContainer/cmsc/contentrepository/resources/cmsc-repository_nl.properties
@@ -61,12 +61,17 @@ content.titlecolumn=Titel
 content.creationchannelcolumn=Creatierubriek
 content.authorcolumn=Auteur
 content.lastmodifiedcolumn=Gewijzigd
+content.expiredatecolumn=Verloopdatum
+content.publishdatecolumn=Publicatiedatum
 content.yes=Ja
 content.no=Nee
 content.move.up=Hoger in lijst
 content.move.down=Lager in lijst
 content.icon.versioning.title=Versiebeheer
 content.move.workflow.message={0}: <b>{1}</b> is verplaatst.
+content.movetochannel.workflow.message={0} is verplaatst van {1} naar {2}.
+content.movetochannel.success=Het content element is verplaatst naar {0}.
+content.movetochannel.failed=Het content element kon niet worden verplaatst naar {0}, dit omdat hij al aan die rubriek gekoppeld is.
 content.icon.savedform.title=Toon bewaarde reactie formulieren.
 
 collection.title=Verzameling
@@ -152,6 +157,7 @@ searchform.clear.channel.button=Leeg
 
 searchform.icon.preview.title=Open een browser met een voorbeeld van dit element.
 searchform.icon.edit.title=Bewerk dit element.
+searchform.icon.move.title=Verplaats dit element naar een andere rubriek.
 searchform.icon.select.title=Selecteer dit element.
 searchform.icon.info.title=Toon informatie over dit element.
 searchform.icon.versioning.title=Versiebeheer
