--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,11 @@
 = MMBase 1.9
 
+image:https://github.com/mmbase/mmbase/workflows/build/badge.svg?[Build Status,link=https://github.com/mmbase/mmbase/actions?query=workflow%3Abuild]
+image:https://img.shields.io/maven-central/v/org.mmbase/mmbase.svg?label=Maven%20Central[Maven Central,link=https://search.maven.org/search?q=g:org.mmbase]
+image:https://codecov.io/gh/mmbase/mmbase/branch/MMBase-1_9/graph/badge.svg[codecov,link=https://codecov.io/gh/mmbase/mmbase]
+// image:http://www.javadoc.io/badge/org.mmbase/media-domain.svg?color=blue[javadoc,link=http://www.javadoc.io/doc/nl.vpro.media/media-domain]
+image:https://img.shields.io/nexus/s/https/oss.sonatype.org/org.mmbase/mmbase.svg[snapshots,link=https://oss.sonatype.org/content/repositories/snapshots/org/mmbase/]
+
 The last stable version of MMBase was 1.9
 
 SNAPSHOTS are now build with github actions and published to sonatype. It uses https://github.com/mmbase/docker[this docker image] to provide the necessary environment for that.
